# copom-streamlit

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: keep-alive.yml
.streamlit/: config.toml
pages/: 0_Inicio.py  1_Perguntas.py  2_Admin.py
